# logradar

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  discovery.rs  main.rs  profile.rs  theme.rs
src/ingest/: mod.rs
src/parse/: mod.rs
src/pattern/: mod.rs
src/search/: mod.rs
src/tui/: mod.rs  source_menu.rs  ui.rs
src/util/: mod.rs
