[package]
name = "logradar"
version = "0.1.0"
edition = "2021"
description = "A modern, colorful log analysis TUI with pattern clustering and fuzzy search"
license = "MIT"
repository = "https://github.com/nanook72/logradar"
readme = "README.md"
keywords = ["log", "tui", "monitoring", "pattern", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
regex = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
